--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.1.2"
+    "@nestjs/core": "^11.1.2",
+    "@nestjs/terminus": "^11.0.0"
   }
 }
