--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
-    "@nestjs/terminus": "^11.0.0"
+    "@nestjs/terminus": "^11.0.0",
+    "nats": "^2.29.3"
   }
 }
