--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
     "@nestjs/terminus": "^11.0.0",
+    "@prisma/client": "^6.9.0",
     "nats": "^2.29.3"
   }
 }
