--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/core": "^11.1.2",
     "@nestjs/terminus": "^11.0.0",
     "@prisma/client": "^6.9.0",
+    "dotenv": "^16.5.0",
     "nats": "^2.29.3"
   }
 }
