--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nestjs/terminus": "^11.0.0",
     "@prisma/client": "^6.9.0",
     "dotenv": "^16.5.0",
-    "nats": "^2.29.3"
+    "nats": "^2.29.3",
+    "pino": "^9.7.0"
   }
 }
