--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.9.0",
     "dotenv": "^16.5.0",
     "nats": "^2.29.3",
-    "pino": "^9.7.0"
+    "pino": "^9.7.0",
+    "prom-client": "^15.1.3"
   }
 }
