--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "nats": "^2.29.3",
     "pino": "^9.7.0",
     "prom-client": "^15.1.3"
+  },
+  "devDependencies": {
+    "prisma": "^6.9.0"
   }
 }
