--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prom-client": "^15.1.3"
   },
   "devDependencies": {
-    "prisma": "^6.9.0"
+    "prisma": "^6.9.0",
+    "ts-node": "^10.9.2"
   }
 }
