--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "dotenv": "^16.5.0",
     "nats": "^2.29.3",
     "pino": "^9.7.0",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
     "prisma": "^6.9.0",
     "supertest": "^7.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "ts-node": "^10.9.2"
   }
 }
