--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nats": "^2.29.3",
     "pino": "^9.7.0",
     "prom-client": "^15.1.3",
+    "typescript": "^5.8.3",
     "uninstall": "^0.0.0"
   },
   "devDependencies": {
