--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "uninstall": "^0.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.2",
     "jest": "^29.7.0",
     "prisma": "^6.9.0",
     "supertest": "^7.1.1",
