--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "prisma": "^6.9.0",
     "supertest": "^7.1.1",
