--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pino": "^9.7.0",
     "prom-client": "^15.1.3",
     "typescript": "^5.8.3",
-    "uninstall": "^0.0.0"
+    "uninstall": "^0.0.0",
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
