feat: add LOG_LEVEL environment variable to services
This commit introduces the `LOG_LEVEL` environment variable to the gateway, consumer, processor, and reporter services in the docker-compose.yml file. This allows for easier configuration of logging levels for these services. The default value for LOG_LEVEL is set to 'info' if not explicitly defined.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     environment:
       - EVENT_ENDPOINT=${EVENT_ENDPOINT}
       - NATS_URL=${NATS_URL}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
     ports:
       - 3000:3000
     healthcheck:
@@ -58,6 +59,7 @@ services:
     environment:
       - NATS_URL=${NATS_URL}
       - DATABASE_URL=${DATABASE_URL}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
     depends_on:
       nats:
         condition: service_healthy
@@ -84,6 +86,7 @@ services:
     environment:
       - NATS_URL=${NATS_URL}
       - DATABASE_URL=${DATABASE_URL}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
     depends_on:
       nats:
         condition: service_healthy
@@ -109,6 +112,7 @@ services:
       dockerfile: reporter.Dockerfile
     environment:
       - DATABASE_URL=${DATABASE_URL}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
     ports:
       - 4000:4000
     depends_on:
