--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^29.7.0",
     "prisma": "^6.9.0",
     "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2"
   }
 }
