--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nats": "^2.29.3",
     "pino": "^9.7.0",
     "prom-client": "^15.1.3",
+    "uuid": "^11.1.0",
     "zod": "^3.25.51"
   },
   "devDependencies": {
