fix: Use curl instead of wget for healthchecks
This commit replaces `wget` with `curl` in the docker-compose.yml healthchecks for both the backend and frontend services. This ensures the healthchecks are more reliable and consistent across different environments where `wget` might not be available.  The `-f` flag in `curl` ensures that the check fails if the HTTP status code is an error.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,7 +149,7 @@ services:
     ports:
       - 9090:9090
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:9090/-/healthy"]
+      test: ["CMD", "sh", "-c", "curl -f http://localhost:9090/-/healthy"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -163,7 +163,7 @@ services:
     ports:
       - 3005:3000
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:3000/api/health"]
+      test: ["CMD", "sh", "-c", "curl -f http://localhost:3000/api/health"]
       interval: 10s
       timeout: 5s
       retries: 5
