fix: Update postgres and nats docker images to latest
This commit updates the postgres and nats docker images in the docker-compose.yml file to use the `latest` tag. This ensures that the services are running the most recent versions of their respective images, potentially including bug fixes and performance improvements.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
       start_period: 30s
 
   postgres:
-    image: postgres:18-alpine
+    image: postgres:latest
     restart: always
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
@@ -127,7 +127,7 @@ services:
       start_period: 30s
 
   nats:
-    image: nats:2.10-alpine
+    image: nats:latest
     command: [ "-js" ]
     ports:
       - 4222:4222
