--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "private": true,
   "dependencies": {
-    "@nestjs/config": "^4.0.2",
     "@nestjs/common": "^11.1.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
     "@nestjs/platform-express": "^11.1.2",
     "@nestjs/terminus": "^11.0.0",
     "@prisma/client": "^6.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "nats": "^2.29.3",
     "pino": "^9.7.0",
