feat: Add database migration service and dependencies
This commit introduces a `migrate` service to handle database migrations using Prisma. This ensures the database schema is up-to-date before other services start.

The changes include:

- Added a `migrate` service definition to `docker-compose.yml` that runs Prisma migrate deploy.
- Updated the `depends_on` section for `collector`, `streamer`, and `web` services to include `migrate` with the condition `service_completed_successfully`. This ensures that these services only start after the database migrations have been successfully applied.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,8 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - LOG_LEVEL=${LOG_LEVEL:-info}
     depends_on:
+      migrate:
+        condition: service_completed_successfully
       nats:
         condition: service_healthy
       postgres:
@@ -78,6 +80,8 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - LOG_LEVEL=${LOG_LEVEL:-info}
     depends_on:
+      migrate:
+        condition: service_completed_successfully
       nats:
         condition: service_healthy
       postgres:
@@ -99,6 +103,8 @@ services:
     ports:
       - 4000:4000
     depends_on:
+      migrate:
+        condition: service_completed_successfully
       postgres:
         condition: service_healthy
     healthcheck:
@@ -168,6 +174,18 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+
+  migrate:
+    image: node:18-alpine
+    working_dir: /app
+    volumes:
+      - ./:/app
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+    command: sh -c "npm ci || npm install && npx prisma migrate deploy --schema=prisma/schema.prisma"
+    depends_on:
+      postgres:
+        condition: service_healthy
 
 volumes:
   pgdata:
