--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
     "@nestjs/platform-express": "^11.1.2",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
     "@prisma/client": "^6.9.0",
     "class-transformer": "^0.5.1",
@@ -28,6 +29,8 @@
     "nats": "^2.29.3",
     "pino": "^9.7.0",
     "prom-client": "^15.1.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "zod": "^3.25.51"
   },
