--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,10 @@ services:
       - EVENT_ENDPOINT=${EVENT_ENDPOINT}
       - NATS_URL=${NATS_URL}
       - LOG_LEVEL=${LOG_LEVEL:-info}
+      - DATABASE_URL=${DATABASE_URL}
     ports:
       - 3000:3000
+    command: sh -c "npx prisma migrate deploy && nest start"
     healthcheck:
       test: ["CMD", "sh", "-c", "curl -f http://localhost:3000/health/live && curl -f http://localhost:3000/health/ready"]
       interval: 10s
@@ -57,6 +59,7 @@ services:
       - NATS_URL=${NATS_URL}
       - DATABASE_URL=${DATABASE_URL}
       - LOG_LEVEL=${LOG_LEVEL:-info}
+    command: sh -c "npx prisma migrate deploy && nest start"
     depends_on:
       nats:
         condition: service_healthy
@@ -82,6 +85,7 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+    command: sh -c "npx prisma migrate deploy && nest start"
     healthcheck:
       test: ["CMD", "sh", "-c", "curl -f http://localhost:3002/health/live && curl -f http://localhost:3002/health/ready"]
       interval: 10s
@@ -96,6 +100,7 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - LOG_LEVEL=${LOG_LEVEL:-info}
+    command: sh -c "npx prisma migrate deploy && nest start"
     ports:
       - 4000:4000
     depends_on:
