fix: Update docker-compose to run compiled code
This commit updates the docker-compose.yml file to execute the compiled JavaScript code directly instead of using `nest start`. This involves running `npx prisma generate` to ensure Prisma client is up-to-date and then executing `node dist/main.js`. This change affects the 'api', 'aggregator', 'collector', and 'manager' services.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
     ports:
       - 3000:3000
-    command: sh -c "npx prisma migrate deploy && nest start"
+    command: sh -c "npx prisma migrate deploy && npx prisma generate && node dist/main.js"
     healthcheck:
       test: ["CMD", "sh", "-c", "curl -f http://localhost:3000/health/live && curl -f http://localhost:3000/health/ready"]
       interval: 10s
@@ -59,7 +59,7 @@ services:
       - NATS_URL=${NATS_URL}
       - DATABASE_URL=${DATABASE_URL}
       - LOG_LEVEL=${LOG_LEVEL:-info}
-    command: sh -c "npx prisma migrate deploy && nest start"
+    command: sh -c "npx prisma migrate deploy && npx prisma generate && node dist/main.js"
     depends_on:
       nats:
         condition: service_healthy
@@ -85,7 +85,7 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
-    command: sh -c "npx prisma migrate deploy && nest start"
+    command: sh -c "npx prisma migrate deploy && npx prisma generate && node dist/main.js"
     healthcheck:
       test: ["CMD", "sh", "-c", "curl -f http://localhost:3002/health/live && curl -f http://localhost:3002/health/ready"]
       interval: 10s
@@ -100,7 +100,7 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - LOG_LEVEL=${LOG_LEVEL:-info}
-    command: sh -c "npx prisma migrate deploy && nest start"
+    command: sh -c "npx prisma migrate deploy && npx prisma generate && node dist/main.js"
     ports:
       - 4000:4000
     depends_on:
