--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   publisher:
     image: andriiuni/events
+    restart: always
     environment:
       - EVENT_ENDPOINT=${EVENT_ENDPOINT}
     depends_on:
@@ -38,6 +39,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
     ports:
       - 3000:3000
+    restart: always
     command: sh -c "npx prisma migrate deploy && npx prisma generate && node dist/main.js"
     healthcheck:
       test: ["CMD", "sh", "-c", "curl -f http://localhost:3000/health/live && curl -f http://localhost:3000/health/ready"]
@@ -60,6 +62,9 @@ services:
       - NATS_URL=${NATS_URL}
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - DATABASE_URL=${DATABASE_URL}
+    restart: always
+    ports:
+      - 3001:3001
     command: sh -c "npx prisma migrate deploy && npx prisma generate && node dist/main.js"
     depends_on:
       nats:
@@ -82,6 +87,9 @@ services:
       - NATS_URL=${NATS_URL}
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - DATABASE_URL=${DATABASE_URL}
+    restart: always
+    ports:
+      - 3002:3002
     depends_on:
       nats:
         condition: service_healthy
@@ -105,6 +113,7 @@ services:
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - DATABASE_URL=${DATABASE_URL}
     command: sh -c "npx prisma migrate deploy && npx prisma generate && node dist/main.js"
+    restart: always
     ports:
       - 4000:4000
     depends_on:
@@ -138,6 +147,7 @@ services:
   nats:
     image: nats:latest
     command: [ "-js" ]
+    restart: always
     ports:
       - 4222:4222
       - 8222:8222
@@ -152,6 +162,7 @@ services:
 
   prometheus:
     image: prom/prometheus:latest
+    restart: always
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheusdata:/prometheus
@@ -166,6 +177,7 @@ services:
 
   grafana:
     image: grafana/grafana:latest
+    restart: always
     volumes:
       - ./grafana/provisioning:/etc/grafana/provisioning
       - grafanadata:/var/lib/grafana
