feat: Mount volume for gateway service
This commit introduces a volume mount for the gateway service to persist data.

The docker-compose.yml file was modified to:

- Add a `volumes` entry for `gatewaydata` under the `depends_on` section of the gateway service.
- Define the `gatewaydata` volume at the root level of the docker-compose.yml file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+    volumes:
+      - gatewaydata:/data
 
   fb-collector:
     build:
@@ -194,4 +196,5 @@ volumes:
   pgdata:
   natsdata:
   prometheusdata:
-  grafanadata: 
+  grafanadata:
+  gatewaydata: 
