fix: Corrected duplicate LOG_LEVEL and added DLQ_PATH to .env.example.development
This commit addresses an issue where the LOG_LEVEL environment variable was defined twice in the .env.example.development file. It also adds the DLQ_PATH environment variable, which specifies the path to the dead letter queue file.  This clarifies the intended environment configuration for development.

--- a/.env.example.development
+++ b/.env.example.development
@@ -5,3 +5,6 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=events
 DATABASE_URL=postgres://postgres:postgres@postgres:5432/events
 LOG_LEVEL=info
+
+DLQ_PATH=./data/dead_letter_queue.jsonl
+LOG_LEVEL=info
