--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "nats": "^2.29.3",
+    "p-limit": "^4.0.0",
     "pino": "^9.7.0",
     "prom-client": "^15.1.3",
     "swagger-jsdoc": "^6.2.8",
