--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
     "@prisma/client": "^6.9.0",
+    "@types/node": "^22.15.30",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
@@ -31,6 +32,7 @@
     "p-limit": "^2.3.0",
     "pino": "^9.7.0",
     "prom-client": "^15.1.3",
+    "stream-json": "^1.9.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
