--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,19 @@ services:
         condition: service_healthy
     volumes:
       - gatewaydata:/data
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
+    ulimits:
+      nproc: 1024
+      nofile:
+        soft: 4096
+        hard: 4096
 
   fb-collector:
     build:
@@ -79,6 +92,19 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
+    ulimits:
+      nproc: 1024
+      nofile:
+        soft: 4096
+        hard: 4096
 
   ttk-collector:
     build:
@@ -104,6 +130,19 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
+    ulimits:
+      nproc: 1024
+      nofile:
+        soft: 4096
+        hard: 4096
 
   reporter:
     build:
@@ -127,6 +166,19 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
+    ulimits:
+      nproc: 1024
+      nofile:
+        soft: 4096
+        hard: 4096
 
   postgres:
     image: postgres:latest
@@ -145,6 +197,19 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+          cpus: '1.0'
+        reservations:
+          memory: 512M
+          cpus: '0.5'
+    ulimits:
+      nproc: 2048
+      nofile:
+        soft: 8192
+        hard: 8192
 
   nats:
     image: nats:latest
@@ -161,6 +226,19 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
+    ulimits:
+      nproc: 1024
+      nofile:
+        soft: 4096
+        hard: 4096
 
   prometheus:
     image: prom/prometheus:latest
@@ -176,6 +254,19 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
+    ulimits:
+      nproc: 1024
+      nofile:
+        soft: 4096
+        hard: 4096
 
   grafana:
     image: grafana/grafana:latest
@@ -191,6 +282,19 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
+    ulimits:
+      nproc: 1024
+      nofile:
+        soft: 4096
+        hard: 4096
 
 volumes:
   gatewaydata:
