--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,14 @@ services:
     environment:
       - EVENT_ENDPOINT=${EVENT_ENDPOINT}
     depends_on:
-      gateway:
-        condition: service_healthy
-      fb-collector:
-        condition: service_healthy
-      ttk-collector:
-        condition: service_healthy
-      reporter:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
-      nats:
-        condition: service_healthy
-      prometheus:
-        condition: service_started
-      grafana:
-        condition: service_started
+      - gateway
+      - fb-collector
+      - ttk-collector
+      - reporter
+      - postgres
+      - nats
+      - prometheus
+      - grafana
     healthcheck:
       test: ["CMD", "sh", "-c", "curl -f http://localhost:3000/health/live && curl -f http://localhost:3000/health/ready"]
       interval: 10s
@@ -48,10 +40,8 @@ services:
       retries: 5
       start_period: 30s
     depends_on:
-      nats:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
+      - nats
+      - postgres
     volumes:
       - gatewaydata:/data
     deploy:
@@ -82,10 +72,8 @@ services:
       - 3001:3001
     command: sh -c "npx prisma migrate deploy && npx prisma generate && node dist/main.js"
     depends_on:
-      nats:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
+      - nats
+      - postgres
     healthcheck:
       test: ["CMD", "sh", "-c", "curl -f http://localhost:3001/health/live && curl -f http://localhost:3001/health/ready"]
       interval: 10s
@@ -119,10 +107,8 @@ services:
     ports:
       - 3002:3002
     depends_on:
-      nats:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
+      - nats
+      - postgres
     command: sh -c "npx prisma migrate deploy && npx prisma generate && node dist/main.js"
     healthcheck:
       test: ["CMD", "sh", "-c", "curl -f http://localhost:3002/health/live && curl -f http://localhost:3002/health/ready"]
@@ -229,16 +215,16 @@ services:
     deploy:
       resources:
         limits:
-          memory: 512M
-          cpus: '0.5'
+          memory: 2G
+          cpus: '2.0'
         reservations:
-          memory: 256M
-          cpus: '0.25'
+          memory: 1G
+          cpus: '1.0'
     ulimits:
-      nproc: 1024
+      nproc: 4096
       nofile:
-        soft: 4096
-        hard: 4096
+        soft: 16384
+        hard: 16384
 
   prometheus:
     image: prom/prometheus:latest
